kubernetes-volumes/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: homework
  name: lession-05
spec:
  type: ClusterIP
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
